--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "moment-timezone": "^0.5.43",
     "nuxt": "^4.0.1",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "@types/xml2js": "^0.4.14"
   }
 }
