--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.8.0",
     "exceljs": "^4.4.0",
+    "fast-xml-parser": "^5.2.5",
     "googleapis": "^126.0.1",
     "moment-timezone": "^0.5.43",
     "nuxt": "^4.0.1",
