--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@types/formidable": "^3.4.5",
     "exceljs": "^4.4.0",
     "fast-xml-parser": "^5.2.5",
+    "formidable": "^3.5.4",
     "googleapis": "^126.0.1",
     "moment-timezone": "^0.5.43",
     "nuxt": "^4.0.1",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   }
 }
